Fix overlapping elements in revisions view

--- a/module/misc/index.css
+++ b/module/misc/index.css
@@ -152,3 +152,26 @@
 .navigation-widget.outline-refresh .navigation-item .navigation-item-level-3 { padding-left: calc(30px + 16px * 3); }
 .navigation-widget.outline-refresh .navigation-item .navigation-item-level-4 { padding-left: calc(30px + 16px * 4); }
 .navigation-widget.outline-refresh .navigation-item .navigation-item-level-5 { padding-left: calc(30px + 16px * 5); }
+
+
+/* REVISIONS VIEW */
+
+/* don't allow the header to overlap the revisions sidebar */
+:root.viewing-revisions #docs-chrome {
+    --real-width: calc(100vw - 300px) !important;
+}
+
+:root.viewing-revisions #docs-toolbar-wrapper {
+    width: calc(100% - 44px) !important;
+}
+
+:root.viewing-revisions .docs-revisions-sidebar {
+    z-index: 506;
+}
+
+/* when in a vertical view, force-place the doc all the way on the left side of the screen */
+@media (max-width: 1260px) {
+    :root.viewing-revisions .kix-zoomdocumentplugin-outer {
+        left: 0 !important;
+    }
+}
